src/objects/Projet__c.object
<CustomObject>
    <fields>
        <fullName>Cout__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_debut__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_fin_prevue__c</fullName>
        <label>Assigned end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Etat__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Terminé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsable</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projet</relationshipLabel>
        <relationshipName>Projet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Web_du_projet__c</fullName>
        <label>Project website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Structure</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projet</relationshipLabel>
        <relationshipName>Projet</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project</label>
    <nameField>
        <label>Projet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projets</pluralLabel>
    <recordTypes>
        <fullName>structure</fullName>
        <active>true</active>
        <description>Project object used as structure in Risk Manager App</description>
        <label>structure</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>